# KingfisherBot

./: .env.rename  .gitignore  Dockerfile  README.md  assets_config.yaml  code.ipynb  docker-compose.yml  example.ipynb  global_config.yaml  logging.conf  podman-compose.yml  pyproject.toml  run.py  sr_config.yaml  sr_manipulation_fix_guide.pine
.github/: copilot-instructions.md
.talib/lib/: libta_lib.dylib
app/: __init__.py  globals.py
app/backtest/: backtest_engine.py
app/brain/: __init__.py  bot_brain.py  confluence_engine.py  feature_extractor.py  models.py  mtf_confluence_engine.py
app/database/: db_handler.py
app/db/: __init__.py  db_handler.py  mtf_data_manager.py  redis_handler.py
app/enums/: AssetStatus.py  MarketRegime.py
app/exchange/: BinanceConnector.py  FyersConnector.py  __init__.py
app/execution/: base_execution.py  binance_execution.py  coin_clustering.py  execution_router.py  paper_execution.py
app/indicators/: BaseIndicatorInterface.py  atr.py  custom_supertrend.py  ema_confluence.py  exponential_moving_average.py  fibonacci_confluence.py  fractal_channel.py  hilbert_cycle.py  liquidity_scorer.py  path_finding_trendline.py  regime_metrices.py  rsi.py  simple_moving_average.py  smart_money.py  support_and_resistance.py  theil_sen_regression.py  trendline_with_breaks.py  volume_profile.py  volume_weighted_regression.py
app/models/: AssetIndicatorConfig.py  RedisConfig.py  indicator_context.py  (+1 more)
config/: asset_indicator_config.py  configs.py
frontend/: index.html  package.json  vite.config.js
scripts/: poetry-ta.sh
(+95 files in other folders)
