[project]
name = "kingfisherbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Priyanshu",email = "Priyanshugupta221@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "vectorbt[full] (>=0.27.2)",
    "ta-lib (==0.4.32)", # use ta-lib ==0.4.32 for docker and local it should be ta-lib >=0.4.32
    "pandas (==1.5.3)",
    "httpx[http2]>=0.27.2,<0.28.0",
    "requests (>=2.32.3)",
    "binance-futures-connector (>=4.1.0,<5.0.0)",
    "plotly (>=5.24.1)",
    "python-dotenv (>=1.0.1)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "aiogram (>=3.20.0)",
    "numpy (>=1.23.5,<1.24.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "kaleido (==0.2.1)",
    "flask-socketio (>=5.3.2,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
